--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -119,9 +119,14 @@
 }
 
 @layer base {
+  html {
+    scroll-padding-top: 5rem;
+  }
+
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
